...
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:popupBackground="@drawable/spinner_item"
...
